# multijet-jec

./: .gitignore  README.md
Analysis/: Makefile  MultijetFOM.cpp  MultijetFOM.hpp  basicPlots.py  binning.json  buildInputs.py  buildSystVars.py  checkBinning.py  controlPlots.py  drawFitFunc.py  drawPostfit.py  fit.cpp  plotConfig.json  produceFitInputs.py  regularization.py  scanChi2.cpp  smoothVars.py  systconfig.py  triggerBins.json  triggerbins.py  triggerclip.py  utils.py
CMSSW/: MultijetJEC_cfg.py  README.md
Fit/: CMakeLists.txt  FitBase.hpp  Makefile  Multijet.cpp
Fit/include/: FitBase.hpp  Multijet.hpp
Fit/prog/: fit.cpp
Fit/src/: FitBase.cpp  Multijet.cpp  Rebin.cpp
Fit/tests/: test_lossFunc.cpp
analysis/: README.md  binning.json  buildInputs.py  controlPlots.py  control_plots.py  env.sh  regularization.py  (+1 more)
events/: CMakeLists.txt  README.md  env.sh
events/config/: README.md  main.json  period_weights.json  samples_descriptions.json  trigger_bins.json
events/data/: README.md  prefiring_maps_2016.root
events/data/PileUp/: pileup_Run2015CD_PFJet260_finebin.root  pileup_Run2016All_PFJet200_finebin.root  pileup_Run2016All_PFJet260_finebin.root  pileup_Run2016All_PFJet400_finebin.root  pileup_Run2016BCD_PFJet260_finebin.root  pileup_Run2016BCD_PFJet320_finebin.root  pileup_Run2016BCD_PFJet400_finebin.root  pileup_Run2016BCD_PFJet450_finebin.root  pileup_Run2016EFearly_PFJet400_finebin.root  pileup_Run2016EFearly_PFJet450_finebin.root  pileup_Run2016FlateG_PFJet140_finebin.root  pileup_Run2016FlateG_PFJet320_finebin.root  pileup_Run2016FlateG_PFJet400_finebin.root  pileup_Run2016H_PFJet400_finebin.root
events/include/: BalanceHists.hpp  BalanceVars.hpp  BasicJetVars.hpp  GenWeights.hpp  JERCJetMETReader.hpp  JERCJetMETUpdate.hpp  L1TPrefiringWeights.hpp  LeadJetTriggerFilter.hpp  PeriodWeights.hpp  PhysicsObjects.hpp  RunFilter.hpp  Weights.hpp
events/prog/: multijet.cpp  partition_runs.cpp
events/scripts/: download_jec.sh  submit_jobs.py
events/src/: BalanceCalc.cpp  BalanceHists.cpp  BalanceVars.cpp  BasicJetVars.cpp  DumpEventID.cpp  DumpWeights.cpp  GenMatchFilter.cpp  GenWeights.cpp  JERCJetMETReader.cpp  JERCJetMETUpdate.cpp  L1TPrefiringWeights.cpp  LeadJetTriggerFilter.cpp  MPIMatchFilter.cpp  PeriodWeights.cpp  PileUpVars.cpp  Weights.cpp  classes.h  classes_def.xml
mensura/: .gitignore  CMakeLists.txt  Makefile  README.md  env.sh
mensura/config/: samples_descriptions.json  triggerBins.json
mensura/data/: pileup_Run2015CD_PFJet200_finebin.root  pileup_Run2015CD_PFJet320_finebin.root
mensura/data/Cleaning/: BadRegions_2017.root
mensura/data/JERC/: Run2016BCD_Spring16_25ns_MPF_LOGLIN_L2Residual_pythia8_v7_AK4PFchs.txt  Run2016EF_Spring16_25ns_MPF_LOGLIN_L2Residual_pythia8_v7_AK4PFchs.txt  Run2016G_Spring16_25ns_MPF_LOGLIN_L2Residual_pythia8_v7_AK4PFchs.txt  Spring16_25ns_MPF_LOGLIN_L2Residual_pythia8_v3_AK4PFchs.txt
mensura/data/PileUp/: pileup_Run2015CD_PFJet140_finebin.root  pileup_Run2015CD_PFJet400_finebin.root  pileup_Run2015CD_PFJet450_finebin.root  pileup_Run2016All_PFJet140_finebin.root  pileup_Run2016All_PFJet200_finebin.root  pileup_Run2016All_PFJet260_finebin.root  pileup_Run2016All_PFJet320_finebin.root  pileup_Run2016All_PFJet400_finebin.root  pileup_Run2016All_PFJet450_finebin.root  pileup_Run2016BCD_PFJet140_finebin.root  pileup_Run2016BCD_PFJet200_finebin.root  pileup_Run2016BCD_PFJet260_finebin.root  pileup_Run2016BCD_PFJet320_finebin.root  pileup_Run2016BCD_PFJet400_finebin.root  pileup_Run2016BCD_PFJet450_finebin.root  pileup_Run2016B_PFJet140_finebin_2p5invfb.root  pileup_Run2016B_PFJet140_finebin_ICHEP.root  pileup_Run2016B_PFJet140_finebin_v1.root  pileup_Run2016B_PFJet140_finebin_v2.root  pileup_Run2016B_PFJet140_finebin_v3.root  pileup_Run2016B_PFJet140_finebin_v4.root  pileup_Run2016B_PFJet200_finebin_2p5invfb.root  pileup_Run2016B_PFJet200_finebin_ICHEP.root  pileup_Run2016B_PFJet200_finebin_v1.root  pileup_Run2016B_PFJet200_finebin_v2.root  pileup_Run2016B_PFJet200_finebin_v3.root  pileup_Run2016B_PFJet200_finebin_v4.root  pileup_Run2016B_PFJet260_finebin_2p5invfb.root  pileup_Run2016B_PFJet260_finebin_ICHEP.root  pileup_Run2016B_PFJet260_finebin_v1.root  pileup_Run2016B_PFJet260_finebin_v2.root  pileup_Run2016B_PFJet260_finebin_v3.root  pileup_Run2016B_PFJet260_finebin_v4.root  pileup_Run2016B_PFJet320_finebin_2p5invfb.root  pileup_Run2016B_PFJet320_finebin_ICHEP.root  pileup_Run2016B_PFJet320_finebin_v1.root  pileup_Run2016B_PFJet320_finebin_v2.root  pileup_Run2016B_PFJet320_finebin_v3.root  pileup_Run2016B_PFJet320_finebin_v4.root  pileup_Run2016B_PFJet400_finebin_2p5invfb.root  (+73 more)
mensura/include/: AngularFilter.hpp  BalanceCalc.hpp  BalanceFilter.hpp  BalanceHists.hpp  BalanceVars.hpp  DumpEventID.hpp  DumpWeights.hpp  EtaPhiFilter.hpp  FirstJetFilter.hpp  GenMatchFilter.hpp  JERCJetMETReader.hpp  JERCJetMETUpdate.hpp  JetIDFilter.hpp  LeadJetTriggerFilter.hpp  MPIMatchFilter.hpp  PileUpVars.hpp  RecoilBuilder.hpp  RunFilter.hpp
mensura/plugins/: BalanceHists.cpp  BalanceHists.hpp  BalanceVars.cpp  BalanceVars.hpp  BasicJetVars.cpp  BasicJetVars.hpp  DatasetScaler.cpp  DatasetScaler.hpp  DumpEventID.cpp  DumpEventID.hpp  DumpWeights.cpp  DynamicPileUpWeight.cpp  DynamicPileUpWeight.hpp  DynamicTriggerFilter.cpp  DynamicTriggerFilter.hpp  EtaPhiFilter.cpp  EtaPhiFilter.hpp  FirstJetFilter.cpp  FirstJetFilter.hpp  GenMatchFilter.cpp  JetIDFilter.cpp  JetIDFilter.hpp  LeadJetTriggerFilter.cpp  LeadJetTriggerFilter.hpp  PileUpVars.cpp  PileUpVars.hpp  RecoilBuilder.cpp  RecoilBuilder.hpp  RunFilter.cpp  TriggerBin.cpp  TriggerBin.hpp
mensura/prog/: CMakeLists.txt  addWeights.cpp  multijet.cpp
mensura/scripts/: downloadJEC.sh
mensura/src/: AngularFilter.cpp  BalanceCalc.cpp  BalanceFilter.cpp  BalanceHists.cpp  BalanceVars.cpp  BasicJetVars.cpp  CMakeLists.txt  EtaPhiFilter.cpp  FirstJetFilter.cpp  JERCJetMETReader.cpp  JERCJetMETUpdate.cpp  JetIDFilter.cpp  LeadJetTriggerFilter.cpp  MPIMatchFilter.cpp  PileUpVars.cpp  RecoilBuilder.cpp  RunFilter.cpp  addWeights.cpp  multijet.cpp  singlejet-test.cpp
(+35 files in other folders)
